force-app/main/default/objects/ucinn_portal_Ticket_Type__c/ucinn_portal_Ticket_Type__c.object-meta.xml
<CustomObject>
    <label>Ticket Type</label>
    <nameField>
        <label>Ticket Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>