force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Actual_Sales_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_End_Date_Time__c</fullName>
    <label>Actual Sales End Date/Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>