force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>