force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The designation to assign the ticket gift amount to. This designation field takes priority over the related listing designation field.</description>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>ucinn_portal_Ticket_Types_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>