force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gift_Amount__c</fullName>
    <description>The amount of the ticket sale that goes to a gift. If the ticket price is less than gift amount (due to a discount, for example), then for those tickets, the gift amount will be reduced to match the discounted price.</description>
    <label>Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>