force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <label>Listing</label>
    <referenceTo>ucinn_portal_Listing__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>ucinn_portal_Ticket_Types_Listing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>