force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Max_Tickets_Per_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Max_Tickets_Per_Purchase__c</fullName>
    <label>Max Tickets Per Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>