force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Max_Tickets_Per_Registrant__c.field-meta.xml
<CustomField>
    <fullName>Max_Tickets_Per_Registrant__c</fullName>
    <inlineHelpText>The &apos;Is Guest Registration Info Required&apos; field being selected on the parent listing will override the value of this field to 1</inlineHelpText>
    <label>Max Tickets Per Registrant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>