force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Sales_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sales_End_Date_Time__c</fullName>
    <label>Sales End Date/Time</label>
    <type>DateTime</type>
</CustomField>