force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>TEXT(Listing__r.Time_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>