force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Total_Number_of_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Tickets__c</fullName>
    <label>Total Number of Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>