force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Total_Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets_Available__c</fullName>
    <formula>IF(Total_Number_of_Tickets__c == null,9999999 ,Total_Number_of_Tickets__c -  Total_Tickets_Sold__c + - Total_Waitlisted_Tickets_Available__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tickets Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>