force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Total_Tickets_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Tickets_Sold__c</fullName>
    <label>Total Tickets Sold</label>
    <summarizedField>ucinn_portal_Ticket__c.Number_of_Tickets__c</summarizedField>
    <summaryForeignKey>ucinn_portal_Ticket__c.Ticket_Type__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>