force-app/main/default/objects/ucinn_portal_Ticket_Type__c/fields/Total_Waitlisted_Tickets_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Waitlisted_Tickets_Available__c</fullName>
    <label>Total Waitlisted Tickets Available</label>
    <summarizedField>ucinn_portal_Event_Waitlist_Entry__c.Number_of_Tickets_Available__c</summarizedField>
    <summaryForeignKey>ucinn_portal_Event_Waitlist_Entry__c.Ticket_Type__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>